# fastapi-project

./: README.md  docker-compose.yml  prod.env  requirements.txt
app/: main.py  pyproject.toml  requirements.txt  tests.py
backend/: Dockerfile  api.py  main.py  pyproject.toml  requirements.txt  tests.py  utils.py
backend/api/: api.py
backend/api/endpoints/: items.py
backend/app/: main.py  tests.py  utils.py
backend/app/api/: api.py
backend/app/api/endpoints/: items.py
backend/app/core/: config.py
backend/app/crud/: base.py  item.py
backend/app/schemas/: __init__.py  item.py
