[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tsepanx <77626319+tsepanx@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
redis = "^3.5.3"
pydantic = "^1.8.2"
requests = "^2.26.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
