[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tsepanx <77626319+tsepanx@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
redis = "*"
pydantic = "*"
requests = "*"
pytest = "*"
python-dotenv = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
